Fixed nag bugs. Removed padding from ul’s and adjusted spacing.

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -289,11 +289,6 @@ dd {
  * Addresses paddings set differently in IE6/7.
  */
 
-menu,
-ol,
-ul {
-    padding: 0 0 0 40px;
-}
 
 /*
  * Corrects list images handled incorrectly in IE7.
