--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-html, body {
-  margin: 0 auto;
-  width: 100%;
-}
-
 .blue {
   background: blue;
 }
@@ -21,6 +16,12 @@ html, body {
 
 .hide {
   display: none;
+}
+
+.navcontainer {
+  margin: 0 auto;
+  overflow: hidden;
+  width: 80%;
 }
 
 .container {
@@ -42,11 +43,10 @@ html, body {
 
 ul {
   list-style: none;
-  padding-left: 4%;
 }
 
-h1 {
-  font-size: 1.5em;
+.logo h1 {
+  font-size: 2em;
   font-weight: bold;
 }
 
@@ -57,11 +57,10 @@ a {
 }
 
 nav {
-  background: red;
   float: left;
   margin: 0px auto;
   max-width: 1920px;
-  width: 18%;
+  width: 15%;
 }
 
 .arrow {
@@ -74,33 +73,40 @@ nav {
 }
 
 .logo {
-  background: teal;
   font-size: 1em;
   width: 100%;
 }
 
-.primarynav {
-  background: blue;
+.primarynav, #secondary-nav--design {
   float: left;
-  font-family: 'Droid Serif', serif;
-  font-weight: 400;
+  font-family: 'Futura', sans-serif;
+  font-weight: 100;
+  margin: 0 auto;
   width: 100%;
 }
-
-.primarynav li {
-  background: orange;
-  font-size: 1em;
-  font-weight: bold;
-  width: 100%;
-}
-
 
 .primarynav ul {
-  background: brown;
+  margin: 0 auto;
+  padding-left: 15%;
+  width: 100%;
+}
+
+#secondary-nav--design ul {
+  overflow: hidden;
+  padding: 5%;
+}
+
+.primarynav li, #secondary-nav--design li {
+  float: left;
+  font-size: 1em;
+  margin: 0 auto;
+  padding: 3%;
+  text-align: left;
+  width: 100%;
 }
 
 .socialmedia {
-  background: yellow;
+  float: left;
   text-align: right;
 }
 
@@ -109,28 +115,17 @@ nav {
   width: 33.333%;
 }
 
-#secondary-nav--design {
-  color: white;
-  background: grey;
-  margin: 0 auto;
-}
-
-#secondary-nav--design li {
-  text-align: left;
-  margin: 0px auto;
-}
-
 
 /* Begin image gallery styling */
 
 
-#imageGallery {
+.imageGallery {
   float: left;
   height: 100%;
-  width: 82%;
+  width: 85%;
 }
 
-#imageGallery img {
+.imageGallery img {
   height: auto;
   max-width: 100%;
 }
